# Physomatik

./: README.md
Map editing/: Map editing.sln
Map editing/Map editing/: Map editing.csproj  Program.cs
Map editing/Map editing/Properties/: AssemblyInfo.cs
Physomatik1/: Physomatik1.sln
Physomatik1/Physomatik1/: Physomatik1.csproj  Program.cs
Physomatik1/Physomatik1/Properties/: AssemblyInfo.cs
Physomatik_Forms/: Physomatik_Forms.sln
Physomatik_Forms/Physomatik/src/: Haskell_calcs.hs  data.txt  map.txt
Physomatik_Forms/Physomatik/src/my-project/: my-project.cabal
Physomatik_Forms/Physomatik_Forms/: Form1.Designer.cs  Form1.cs  Physomatik_Forms.csproj  Program.cs
Physomatik_Forms/Physomatik_Forms/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Physomatik_Haskell/: cabal-1.22.0.0-i386-unknown-mingw32.exe.lkshs  cabal-1.22.0.0-i386-unknown-mingw32.exe.lkshw
Physomatik_Haskell/Physomatik/: Physomatik.cabal
Physomatik_Haskell/Physomatik/src/: Haskell_calcs.hi  Haskell_calcs.hs  Stoß.hs  data.txt  end.txt  hello.hi  hello.hs  hi.txt  map.txt  test.txt
Physomatik_Haskell/Physomatik/src/my-project/config/: settings.yml
