-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: Physomatik
version: 1.0.0.1
license: BSD3
license-file: LICENSE
copyright: (c) Timo Borner
author: Timo Borner
maintainer: Timo Borner <timo@borners.de>
bug-reports: mailto:timo@borners.de
stability: stable
homepage: funglasses.de
synopsis: Physomatik, an awesome Package
category: Console, Text
cabal-version: >= 1.6
build-type: Complex

Description:
  This is an implementation of some physical / mathematical laws in Haskell!

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

executable Physomatik
  hs-source-dirs: src
  main-is: hello.hs
  build-depends: base >= 4.2 && < 5

  if flag(threaded)
     ghc-options: -threaded
